--- a/app.json
+++ b/app.json
@@ -13,8 +13,7 @@
     "formation": {
         "worker": {
             "quantity": 1,
-            "size": "free"
-        }
+            "size": "eco"       }
     },
     "env": {
         "APP_NAME": {
